# -mlb-dashboard-

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  config.yaml  docker-compose.yml  parks.csv  public.command  pyproject.toml  requirements.txt
.claude/: launch.json
db/: schema.postgres.sql
hrplaybook/: __init__.py  backfill_snapshots.py  bvp.py  cache.py  calibration.py  cli.py  config.py  featured.py  freshness.py  grade.py  http.py  manual_odds.py  odds_api.py  odds_keys.py  performance.py  pipeline.py  seasons.py  util.py  value_center.py
hrplaybook/model/: enrich.py  schemas.py
hrplaybook/report/: cards.py  cheatsheet.py  csvout.py  picks.py  render.py
hrplaybook/score/: __init__.py  batter.py  bettypes.py  edges.py  environment.py  pitcher.py  tiering.py  value.py
hrplaybook/sources/: odds.py  rotowire.py  savant.py  statsapi.py  weather.py
hrplaybook/store/: __init__.py  models.py  repo.py  schema.py
hrplaybook/templates/: cheatsheet.html.j2  cheatsheet.md.j2
hrplaybook/web/: app.py
tests/: conftest.py  test_auth.py  test_batch10.py  test_batch11.py  test_batch12.py  test_batch13.py  test_batch3.py  test_batch4.py  test_batch5.py  test_batch6.py  test_batch7.py  test_batch8.py  test_batch9.py  test_csvout_schema.py  test_enrich.py  test_featured.py  test_features.py  test_freshness.py  test_full_run.py  test_odds_env.py  test_perf.py  test_scoring.py  test_scoring_logic.py  test_sources.py  test_store.py  test_value_lines.py
tests/fixtures/: boxscore_777094.json  openmeteo_rogers.json  people_multi.json  (+6 more)
(+5 files in other folders)
