[project]
name = "hrplaybook"
version = "1.0.0"
description = "Automated MLB home-run / total-bases / HRR betting cheat-sheet generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pandas>=2.1",
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hrplaybook = "hrplaybook.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hrplaybook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
